<resources>
    <string name="app_name">FoodReciepes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipies_fragment">Recipies</string>
    <string name="favorit_fragment">Favorite</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="menufab">menufab</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="title">Title</string>
    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="side_dish">Side Dish</string>
    <string name="appetizer">Appetizer</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="katogenic">Katogenic</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="Vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="fingerfood">Finger Food</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="breakfast">BreakFast</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="apply">Apply</string>
    <string name="diet_type">Diet Type</string>
    <string name="search">Search</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
</resources>