<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.overview.OverviewFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradientOverlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/time_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/likes_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/darkGrey"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="@+id/title_textview"
        app:layout_constraintTop_toBottomOf="@+id/title_textview"
        app:tint="@color/darkGrey" />

    <TextView
        android:id="@+id/vegetarian_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:tint="@color/darkGrey" />

    <TextView
        android:id="@+id/vegan_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Vegan"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/gluten_free_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textview"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_textview"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_textview"
        app:tint="@color/darkGrey" />

    <TextView
        android:id="@+id/gluten_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageview"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_imageview"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_imageview" />

    <ImageView
        android:id="@+id/dairy_free_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="@+id/gluten_free_imageview"
        app:layout_constraintStart_toStartOf="@+id/gluten_free_imageview"
        app:layout_constraintTop_toBottomOf="@+id/gluten_free_imageview"
        app:tint="@color/darkGrey" />

    <TextView
        android:id="@+id/dairy_free_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageview"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_imageview"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_imageview" />

    <ImageView
        android:id="@+id/healthy_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_textview"
        app:layout_constraintStart_toEndOf="@+id/gluten_textview"
        app:layout_constraintTop_toTopOf="@+id/gluten_textview"
        app:tint="@color/darkGrey" />

    <TextView
        android:id="@+id/healty_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_imageview"
        app:layout_constraintStart_toEndOf="@+id/healthy_imageview"
        app:layout_constraintTop_toTopOf="@+id/healthy_imageview" />

    <ImageView
        android:id="@+id/cheap_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="@+id/healthy_imageview"
        app:layout_constraintStart_toStartOf="@+id/healthy_imageview"
        app:layout_constraintTop_toBottomOf="@+id/healthy_imageview"
        app:tint="@color/darkGrey" />

    <TextView
        android:id="@+id/cheap_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Cheap"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_imageview"
        app:layout_constraintStart_toEndOf="@+id/cheap_imageview"
        app:layout_constraintTop_toTopOf="@+id/cheap_imageview" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dairy_free_textview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/summary_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>